# agent-ray

./: AGENTS.md  Cargo.toml  LICENSE  README.md
.github/prompts/: plan-gradientDomainPt.prompt.md
design/: notes.md  roadmap.md
src/: cameras.rs  film.rs  geometry.rs  importer.rs  lib.rs  lights.rs  sampler.rs  scene.rs  surfaces.rs  texture.rs  utils.rs
src/accel/: bvh.rs
src/integrators/: bidirectional_path_tracer.rs  gradient_domain_pt.rs  mod.rs  path_tracer.rs
src/lights/: point.rs
src/primitives/: mesh.rs
src/surfaces/: lambertian.rs  microfacet.rs
