[package]
name = "agent-ray"
version = "0.1.0"
edition = "2024"

[dependencies]
glam = "0.32.0"
rand = "0.10.0"
rayon = "1.11.0"
image = "0.25.5"
exr = "1.74.0"
smallvec = "1"
tobj = "4.0.3"
anyhow = "1.0.102"
mimalloc = { version = "*", features = ["secure"] }


[profile.dev]
opt-level = 2
incremental = true

[[bin]]
name = "render_test"
path = "bin/render_test.rs"

[[bin]]
name = "pt_test"
path = "bin/pt_test.rs"

[[bin]]
name = "bdpt_test"
path = "bin/bdpt_test.rs"

[[bin]]
name = "gdpt_test"
path = "bin/gdpt_test.rs"
